--- a/pom.xml
+++ b/pom.xml
@@ -444,6 +444,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1</version>
+                <configuration>
+                    <attachClasses>true</attachClasses>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
