--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -891,7 +891,7 @@ error.required.amount.released.start.date=Start date is  a required field.
 error.required.amount.released.end.date= End date is  a required field.
 error.required.amount.released.effective.date=Effective date is  a required field.
 error.required.amount.released=Amount released is  a required field.
-error.required.subaward.contact.rolodex.id=Rolodex name is a required field.
+error.required.subaward.contact.rolodex.id=Address Book selection is a required field.
 error.required.subaward.contact.contact.type.code=Contact type code is a required field.
 error.required.subaward.closeout.closeout.type.code=Closeout type code is a required field.
 error.required.subaward.closeout.date.requested=Date requested is a required field.
