--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     version="2.5"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee   http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>KCRA Application</display-name>
@@ -180,7 +180,7 @@
   	<listener>
     	<listener-class>org.kuali.rice.krad.web.session.NonSerializableSessionListener</listener-class>
  	</listener>
-  
+   
     <listener>
         <listener-class>org.kuali.rice.core.web.listener.BootstrapListener</listener-class>
     </listener>
