--- a/pom.xml
+++ b/pom.xml
@@ -446,7 +446,7 @@
                 <version>2.1</version>
                 <configuration>
                     <attachClasses>true</attachClasses>
-                </configuration>
+                </configuration>                
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -985,7 +985,7 @@
 		<dependency>                    
 			<groupId>org.kuali.kra.print.xsds</groupId>                    
 			<artifactId>kc-printing-xsds</artifactId>                    
-			<version>1.4.0</version>              
+			<version>1.4.0</version>  
 		</dependency>
 		<dependency>                    
 			<groupId>org.kuali.kra.s2s</groupId>                    
@@ -1641,7 +1641,9 @@
           	WEB-INF/lib/,
 			
 			WEB-INF/tags/rice-portal/mainTab.tag,
-			
+			WEB-INF/dwr-kew.xml,
+			WEB-INF/dwr-kns.xml,
+			WEB-INF/krad-servlet.xml,
 			WEB-INF/struts-config.xml,
 			WEB-INF/validator-rules.xml,
 			WEB-INF/web.xml,
