KRACOEUS-5398 : Prompt user before deleting negotiation activities.

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -923,6 +923,7 @@ negotiation.error.activity.start.before.end=Activity End Date must be the same o
 negotiation.message.closePendingActivities=Changing the Negotiation Status to Suspended or Complete will close all pending Negotiation Activities. Are you sure you want to change the Negotiation Status?
 negotiation.message.duplicateNegotiationLinked=A Negotiation already exists for this {0}. Do you want to create a new Negotiation for this {0}?
 negotiation.error.multiplePi=Only one Principal Investigator is allowed.
+negotiation.message.deleteActivity=Are you sure you want to delete this Activity?
 
 message.financial.entity.action.successfully.completed={0} successfully completed.
 message.disclosure.submit.thankyou=Thank you for submitting your certification.
