KCINFR-532: Moving help files to src/main/config so they are not duplicated in the war

--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 			            <phase>generate-sources</phase>
 			            <configuration>
 			                <tasks>
-			                    <unzip src="src/main/resources/help.zip" 
+			                    <unzip src="src/main/config/help.zip" 
 			                           dest="src/main/webapp/static/" 
 			                           overwrite="false" />
 			                </tasks>
