--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -882,6 +882,9 @@ error.required.subaward.typecode=Subaward type is a required field.
 error.required.requisitioner=Requisitioner is a required field.
 error.required.requisitioner.unit=Requisitioner Unit is not valid.
 error.required.purchase.order.num=Purchase order Id is a required field.
+error.invalid.subrecipient.id={0} is not valid, please select a subrecipient
+error.invalid.siteinvestigator.id={0} is not valid, please select a siteinvestigator
+error.invalid.requisitioner={0} is not valid, please select a requisitioner
 subaward.contact.not.added=There are no Contacts.Please add at least one Contact.
 
 error.required.effective.date=Effective date is a required field.
