--- a/pom.xml
+++ b/pom.xml
@@ -906,7 +906,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.kuali.kra.s2s</groupId>
-			<artifactId>phs398modularbudget-1.2</artifactId>
+			<artifactId>phs398modularbudget-1.2-gg</artifactId>
 			<version>1.0.4</version>
 		</dependency>
 		<dependency>
@@ -1342,27 +1342,16 @@
 
 	<repositories>
          <repository> 
-                <id>kuali.nexus</id> 
-                <name>Nexus Repository Manager</name> 
-                <url>http://nexus.kuali.org/content/groups/public</url> 
-                <releases> 
-                        <enabled>true</enabled> 
-                </releases> 
-                <snapshots> 
-                        <enabled>true</enabled> 
-                </snapshots> 
-        </repository> 
-		<repository>
-            <id>kuali.nexus.backup</id> 
-            <name>Nexus Repository Manager (Backup Location)</name> 
-            <url>http://maven.kuali.org/external</url> 
+            <id>kuali.nexus</id> 
+            <name>Nexus Repository Manager</name> 
+            <url>http://nexus.kuali.org/content/groups/public</url> 
             <releases> 
                 <enabled>true</enabled> 
             </releases> 
             <snapshots> 
                 <enabled>true</enabled> 
             </snapshots> 
-        </repository>
+        </repository> 
 		<repository>
 			<id>kuali</id>
 			<name>Kuali Repository</name>
