--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -110,6 +110,7 @@ error.award.contact.person.role.required=Please select a Project Role
 error.award.person.credit.split.error=The Project Personnel {0} Credit Split does not equal 100%
 error.award.person.unit.credit.split.error=The Unit {0} Credit Split for {1} does not equal 100%
 error.award.templateCode.notFound=Select sponsor template before applying sync
+error.award.sponsor.template.notFound=A Sponsor Template must be selected and applied before taking the sync to template action.
 error.award.sponsorTemplate.term.required=No < {0} > terms are selected for the current award. Please add a term.
 error.awardApprovedEquipment.amount.invalid=Approved Equipment Amount is less than ${0} {1} capitalization minimum
 error.awardApprovedEquipment.notunique=Approved Equipment Vendor, Model and Item must be unique
