--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -829,7 +829,7 @@ app.copyright=Copyright 2005-2010 The Kuali Foundation. All rights reserved.<BR/
 error.committeeSchedule.delete=You cannot delete this schedule. It has been used in protocol submission or has meeting data entered.
 error.committeeMember.delete=This person cannot be deleted {0}.
 
-error.protocol.search.invalid.date=Enter a valid date.
+error.search.invalid.date=Enter a valid date.
 error.persontraining.exists=Training Number {0} already exists for person {1}
 error.protocol.reviewTypeCode.mustbe.fyi=Submission review type must be 'FYI' when submission type is 'FYI'.
 #Protocol Online Review Search
