--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -871,6 +871,8 @@ error.grantsgov.form.xmlprocess=Xml parser is not able to parse the opportunity 
 error.grantsgov.form.schema.server.down=Unable to process opportunity schema {1}. Grants.Gov schema repository server might be down. Root cause:{0}
 error.sponsorForms.selector=Either "Sponsor Code" or "Sponsor Hierarchy Group Name" must be supplied.
 error.timeandmoney.invalidawardnumber={0} is not a valid award number.
+error.transaction.amounts.negative=Transaction amounts cannot be negative.
+
 
 error.negotiations.codeAlreadyUsed=The code {0} is already in use.  Please select something else.
 error.unitnumber.required=Unit Number is a required field.
