--- a/pom.xml
+++ b/pom.xml
@@ -446,7 +446,7 @@
                 <version>2.1</version>
                 <configuration>
                     <attachClasses>true</attachClasses>
-                </configuration>                
+                </configuration>  
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -528,17 +528,19 @@
 		    <!-- should be provided once embedded jetty is figured out -->
 		    <scope>test</scope>
 		</dependency>
-    <dependency>
-      <groupId>org.kuali.commons</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>${commons-beanutils.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>commons-logging</artifactId>
-          <groupId>commons-logging</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+    
+	    <dependency>
+		    <groupId>org.kuali.commons</groupId>
+		    <artifactId>commons-beanutils</artifactId>
+		    <version>${commons-beanutils.version}</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>commons-logging</artifactId>
+		    		<groupId>commons-logging</groupId>
+		    	</exclusion>
+		    </exclusions>
+		</dependency>
+	
 		<dependency>
 		    <groupId>commons-collections</groupId>
 		    <artifactId>commons-collections</artifactId>
@@ -562,7 +564,7 @@
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>jul-to-slf4j</artifactId>
 		    <version>${slf4j.version}</version>
-		    <scope>runtime</scope>
+   		    <scope>runtime</scope>
 		</dependency>
 		
 		<!-- binding forwards slf4j calls to log4j (should only contain a single binder) -->
@@ -570,14 +572,14 @@
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-log4j12</artifactId>
 		    <version>${slf4j.version}</version>
-		    <scope>runtime</scope>
+   		    <scope>runtime</scope>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-api</artifactId>
 		    <version>${slf4j.version}</version>
-		    <scope>runtime</scope>
+   		    <scope>runtime</scope>
 		</dependency>
 
 		<dependency>
@@ -1309,6 +1311,32 @@
 			<id>server-embedded</id>
 			<build>
 				<plugins>
+					<plugin> 
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.kuali.rice</groupId>
+									<artifactId>rice-standalone</artifactId>
+									<version>${rice.version}</version>
+									<type>war</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}/</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<stripVersion>true</stripVersion>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+			 
+		<profile>
+			<id>client-embedded</id>
+			<build>
+				<plugins>
+				
 					<plugin>
 						<groupId>org.mortbay.jetty</groupId>
 						<artifactId>jetty-maven-plugin</artifactId>
@@ -1316,18 +1344,12 @@
 							<webAppConfig>
 								<contextPath>${default.context.path}</contextPath>
 							</webAppConfig>
-							<contextHandlers>
-								<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-									<!-- this is kind of hacky not sure if there is a better way -->
-									<war>${settings.localRepository}/org/kuali/rice/rice-standalone/${rice.version}/rice-standalone-${rice.version}.war</war>
-									<contextPath>/kr-dev</contextPath>
-								</contextHandler>
-							</contextHandlers>
-						</configuration>
+						  </configuration>
 					</plugin>			
 				</plugins>
 			</build>
 		</profile>
+		
         <!-- 
             This profile defines the dependencies required for selenium to run properly on CI
          -->
