--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -627,6 +627,9 @@ error.date.not.set=The Obligated dates must be entered on Award Number {0} befor
 error.date.null=The {1} of Award Number {0} cannot be empty.
 error.obligated.dates.invalid=The Obligated start date of Award number {0} must come before Obligated end date.
 error.obligated.end.date=The Obligated end date of Award number {0} cannot be after project end date.
+error.obligated.start.before.project.start=The Obligated start date of Award number {0} cannot be before project start date.
+error.obligated.end.before.project.start=The Obligated end date of Award number {0} cannot be before project start date.
+error.project.end.before.project.start=The Project end date of Award number {0} cannot be before project start date.
 warning.transaction.obligated.less.than.limit=This transaction will cause the Total Costs Budget Limit to be greater than the Obligated Distributable Total for Award {0}.
 error.unknown.username=The person is unknown.
 error.viewBudgetPeriod.notSelected=Budget Period must be selected to add a new Line Item.
