--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -950,3 +950,5 @@ error.personMassChange.document.locked=Unable to perform a Person Mass Change fo
 
 message.committeeSchedule.agendaSent=Agenda has been sent.
 message.committeeSchedule.minutesSent=Meeting minutes have been sent.
+
+message.updated.by=Updated by:
