--- a/pom.xml
+++ b/pom.xml
@@ -1462,7 +1462,7 @@
 		<mail.version>1.4.4</mail.version>
 		<mysql.version>5.1.16</mysql.version>
 		<oracle.version>10.2.0.3.0</oracle.version>
-		<rice.version>2.0.1-M4</rice.version>
+		<rice.version>2.0.1</rice.version>
 		<selenium.version>2.12.0</selenium.version>
 		<servlet.version>2.5</servlet.version>
 		<slf4j.version>1.6.4</slf4j.version>
