KCCOI-204: Change FE button to Cancel and modify its landing page after canceling

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -1,6 +1,7 @@
 budget.expense.lookup.message1=This object code name lookup has been pre-filtered to only display object codes related to the Panel you selected.
 budget.expense.lookup.message2=related object codes.
 clear.audit.error.before.change.status.to.complete=You must clear audit errors before change status to complete.  Please go to validation panel to check audit errors.
+
 confirmation.periodTotal.greaterThan.costLimit=Period Total Cost is Greater than the Cost Limit for this Period. Do You Want to Reduce this Line Item Cost to make the Period Total Cost Same as the Period Cost Limit?
 confirmation.periodTotalDirectCost.greaterThan.costLimit=Period Direct Cost is Greater than the Direct Cost Limit for this Period. Do You Want to Reduce this Line Item Cost to Make the Period Direct Cost the Same as the Period Direct Cost Limit?
 document.question.approve.text=Do you want to receive future approval requests?
@@ -952,3 +953,5 @@ message.committeeSchedule.agendaSent=Agenda has been sent.
 message.committeeSchedule.minutesSent=Meeting minutes have been sent.
 
 message.updated.by=Updated by:
+
+message.cancel.fe=Are you sure you want to discard your changes?
