KCCOI-204: Better message for cancel confirmation

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -954,4 +954,4 @@ message.committeeSchedule.minutesSent=Meeting minutes have been sent.
 
 message.updated.by=Updated by:
 
-message.cancel.fe=Are you sure you want to discard your changes?
+message.cancel.fe=Are you sure you wish to cancel? All changes will be discarded.
