--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -174,7 +174,7 @@ error.awardReportTermItem.ospRequired=OSP File Copy is required for a final repo
 error.awardReportTermItem.frequencyRequired=Frequency is required if OSP File Copy is selected.
 error.awardReportTermItem.noPI=Report tracking details won't be added until a principal investigator is set.
 error.awardReportTermItem.noReportTracking=There are no report tracking records to {0}.
-error.awardReportTermRecipientItem.notunique=Award Report Term Recipient Items are not unique.
+error.awardReportTermRecipientItem.notunique=A duplicate Recipient has already been added for this Report.
 error.both.sponsor.and.rolodex.are.selected=Please select {0} or {1}. Both can not be selected.
 error.both.sponsor.and.rolodex.are.not.selected={0} or {1} must be selected.
 error.awardSponsorContact.person.exists={0} is already added to the Award Sponsor Contacts
