KCCOI-238: Two problems with entering customized Disclosure Event Types

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -955,3 +955,6 @@ message.committeeSchedule.minutesSent=Meeting minutes have been sent.
 message.updated.by=Updated by:
 
 message.cancel.fe=Are you sure you wish to cancel? All changes will be discarded.
+
+label.coi.disclosure.type.id=Event ID
+label.coi.disclosure.type.title=Event Title
