--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -937,7 +937,7 @@ negotiation.message.deleteActivity=Are you sure you want to delete this Activity
 message.financial.entity.action.successfully.completed={0} successfully completed.
 message.disclosure.submit.thankyou=Thank you for submitting your certification.
 error.coi.financialentity.status.required=Entity Status is required.
-error.coi.duplicate.projectid=Project Id Already Exists!  Choose Another One.
+error.coi.duplicate.projectid=Project Id {0} already exists. Enter a different one.
 error.coi.disclosure.status.required=Disclosure Status is required.
 error.coi.financialentity.status.incomplete=Financial Entity Status not complete.
 
