--- a/pom.xml
+++ b/pom.xml
@@ -687,7 +687,15 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
+	        <!-- should be provided scope on newer containers like tomcat 7 -->
+	        <scope>compile</scope>			
 		</dependency>
+	    <dependency>
+	        <groupId>javax.servlet.jsp</groupId>
+	        <artifactId>jsp-api</artifactId>
+	        <version>${jsp-api.version}</version>
+	        <scope>provided</scope>
+	    </dependency>		
 		<dependency>
 		    <groupId>log4j</groupId>
 		    <artifactId>log4j</artifactId>
@@ -1454,6 +1462,7 @@
 		<rice.version>2.0.1</rice.version>
 		<selenium.version>2.15.0</selenium.version>
 		<servlet.version>2.5</servlet.version>
+		<jsp-api.version>2.1</jsp-api.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<struts.version>1.3.10</struts.version> 
 		<commons-beanutils.version>1.8.3-kuali</commons-beanutils.version>
