--- a/pom.xml
+++ b/pom.xml
@@ -686,7 +686,13 @@
 		    <groupId>org.glassfish.web</groupId>
 		    <artifactId>jstl-impl</artifactId>
 		    <version>${jstl.version}</version>
-	        <scope>compile</scope>		    
+	        <scope>compile</scope>	
+	         <exclusions>
+		    	<exclusion>
+		    		<groupId>javax.servlet.jsp</groupId>
+		    		<artifactId>jsp-api</artifactId>
+		    	</exclusion>
+		    </exclusions>	    
 		</dependency>
 		<dependency>
 		    <groupId>log4j</groupId>
