--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -419,6 +419,7 @@ error.proposalAttachment.narrativeType.allowMulitple={0} attachment with Attachm
 error.proposalAttachment.narrativeType.notSelected=Please select an attachment type.
 error.proposalAttachment.notAuthorized=User not authorized to modify proposal attachment {0}.  A reload is recommended.
 error.proposalData.override.samevalue=Proposal {0} is being updated with the same value {1}
+error.budgetData.override.samevalue=Budget {0} is being updated with the same value {1}
 error.proposalLog.invalidStatusChange=Proposal Status cannot be changed to {0}.
 error.proposalLog.multiplePi=Only one Principal Investigator can be chosen.
 error.proposalLog.invalidLeadUnit=Please enter a valid Lead Unit.
