KCIAC-60 IACUC Exception Tab

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -605,6 +605,7 @@ question.special.review.delete.confirmation=Are you sure you want to delete this
 error.special.review.protocol.locked=Protocol number {0} is locked by another user.
 
 question.iacuc.protocol.species.delete.confirmation=Are you sure you want to delete this Protocol Species?
+question.iacuc.protocol.exception.delete.confirmation=Are you sure you want to delete this Protocol Exception?
 
 error.sponsor.duplicate=The selected Sponsor has already been added.
 error.sponsor.invalid=The system has no record of the selected Sponsor.  Please select a valid Sponsor.
