--- a/pom.xml
+++ b/pom.xml
@@ -1479,7 +1479,7 @@
 		<mail.version>1.4.4</mail.version>
 		<mysql.version>5.1.16</mysql.version>
 		<oracle.version>10.2.0.3.0</oracle.version>
-		<rice.version>2.0.1</rice.version>
+		<rice.version>2.1.0-r32110</rice.version>
 		<selenium.version>2.15.0</selenium.version>
 		<servlet.version>2.5</servlet.version>
 		<jsp-api.version>2.1</jsp-api.version>
