--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -962,3 +962,6 @@ message.cancel.fe=Are you sure you wish to cancel? All changes will be discarded
 
 label.coi.disclosure.type.id=Event ID
 label.coi.disclosure.type.title=Event Title
+
+error.iacuc.validation.alternate.search=Validation errors exist on the {0} field. Please correct these errors prior to adding the alternative search.
+error.iacuc.validation.searchdate.after.currentdate=Search Date cannot be in the future.  Please correct prior to adding the alternative search.
