KCIAC-41, KCIAC-42: Adding IACUC specific review types and member roles.

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -221,6 +221,7 @@ error.column.datatype.mismatch=The input datatype does not match the field's ori
 error.committee.duplicateId=Duplicate Committee ID.
 error.committee.duplicateName=Duplicate Committee Name.
 error.committee.invalidId=Invalid Committee ID.
+error.committeeType.not.exist=Committee type code {0} does not exist.
 error.committee.reviewType.required=Committee Review Type is required.
 error.committee.researchArea.inactive=All research areas associated with the committee must be active.
 error.committee.action.generate.batch.correspondence.type.code.not.specified=Batch type missing.
