--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -739,7 +739,7 @@ error.award.hierarchy.notsaved=Award Hiearchy changes not saved: Error cause: {0
 error.create.new.child.other.award.not.selected=No award selected for {0}'s Create operation with selected option.
 error.create.new.child.no.option.selected=Please select one of the three radios for Create New Child Operation for {0}.
 error.copy.award.childOf.award.not.selected=No award selected for {0}'s Copy Award with child of option.
-error.copy.award.no.option.selected=Please select one of the three radios for Copy Award Operation for {0}.
+error.copy.award.no.option.selected=Please select 'Copy as new' or 'Copy as child of' for {0}.
 
 # Award Hierarchy Sync
 document.question.awardhierarchy.sync=Do you want to add this change to the Award Hierarchy Sync Queue?
