Restoring "Provide Feedback" link text

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -747,7 +747,8 @@ error.award.awardhierarchy.sync.whichdescendants=You must select what descendant
 error.award.awardhierarchy.sync.invalidstatus=The Award {0} must have an active version and no pending versions.
 error.award.awardhierarchy.sync.locked=This Award has been locked for an Award Hierarchy Sync operation by document number {0}. 
 
-#START - Overriden rice properties 
+#START - Overriden rice properties
+app.feedback.linkText=Provide Feedback
 app.feedback.link=https://test.kuali.org/jira/secure/CreateIssue.jspa?pid=10310&issuetype=1
 document.question.delete.text=Are you sure you want to delete {0}?
 #END - Overriden rice properties
