--- a/pom.xml
+++ b/pom.xml
@@ -271,7 +271,6 @@
 	                                    <!-- already including the jdk15 version -->
 										<exclude>org.bouncycastle:bcprov-jdk14</exclude>
 										<exclude>org.bouncycastle:bcprov-jdk15</exclude>
-										<exclude>taglibs:standard</exclude>
 	                                    <exclude>javax.servlet:jstl</exclude>
 	                                    <!-- allowing (including) a specific version below -->
 	
@@ -346,6 +345,7 @@
 				                    <includes>
 										<!-- only allow in this specific version -->
 										<include>org.slf4j:*:${slf4j.version}</include>
+										<include>javax.servlet:jstl:${jstl.version}</include>
 				                    </includes>
 								</bannedDependencies>
 							</rules>
@@ -686,22 +686,17 @@
 			<version>${servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-		    <groupId>org.glassfish.web</groupId>
-		    <artifactId>jstl-impl</artifactId>
-		    <version>${jstl.version}</version>
-	        <scope>compile</scope>	
-			<exclusions>
-				<exclusion>
-					<groupId>javax.servlet</groupId>
-					<artifactId>servlet-api</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.servlet.jsp</groupId>
-					<artifactId>jsp-api</artifactId>
-				</exclusion>
-		    </exclusions>	    
-		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>jsp-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 		<dependency>
 		    <groupId>log4j</groupId>
 		    <artifactId>log4j</artifactId>
@@ -1147,6 +1142,11 @@
 	      <artifactId>struts-taglib</artifactId>
 	      <version>${struts.version}</version>
 	    </dependency>
+	    <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
 		<dependency>
 		    <groupId>xalan</groupId>
 		    <artifactId>xalan</artifactId>
@@ -1340,6 +1340,11 @@
 					</plugin>
 				</plugins>
 			</build>
+			
+            <properties>
+                <!-- overriding property to change versions of libraries-->
+                <jstl.version>1.2</jstl.version>
+            </properties>
 		</profile>
 
 	    <!-- 
@@ -1368,13 +1373,17 @@
 					</plugin>
 				</plugins>
 			</build>
+			
+            <properties>
+                <!-- overriding property to change versions of libraries-->
+                <jstl.version>1.2</jstl.version>
+            </properties>
 		</profile>
 			 
 		<profile>
 			<id>client-embedded</id>
 			<build>
 				<plugins>
-				
 					<plugin>
 						<groupId>org.mortbay.jetty</groupId>
 						<artifactId>jetty-maven-plugin</artifactId>
@@ -1387,6 +1396,11 @@
 					</plugin>			
 				</plugins>
 			</build>
+			
+			<properties>
+                <!-- overriding property to change versions of libraries-->
+                <jstl.version>1.2</jstl.version>
+            </properties>
 		</profile>
         
 	    <profile>
@@ -1475,7 +1489,7 @@
 		<drools.version>5.1.1</drools.version>
 		<jetty.version>7.5.1.v20110908</jetty.version>
 		<jmock.version>2.5.1</jmock.version>
-		<jstl.version>1.2</jstl.version>
+		<jstl.version>1.1.2</jstl.version>
 		<mail.version>1.4.4</mail.version>
 		<mysql.version>5.1.16</mysql.version>
 		<oracle.version>10.2.0.3.0</oracle.version>
