--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -264,6 +264,8 @@ error.committeeSchedule.viewTime.blank = Time is a required field.
 error.committeeSchedule.viewTime.formatting = {0} is not formatted properly. Please use {1}.
 error.committeeSchedule.endTime.before.startTime=End Time should be on or after Start Time.
 error.committeeSchedule.weekday=Minimum one(1) selection of week day required.
+error.committeeScheduleAttachments.attachmentsTypeCode.blank= Meeting Attachment Type is required.
+error.committeeScheduleAttachments.meeting.file.blank= File is required
 error.congressionalDistrict.format=Congressional District format must be X-Y, where X is a two-letter state code and Y is between one and three digits. Y can also be 'all'. Special districts are US-all for nationwide, and 00-000 for non-US.
 error.congressionalDistrict.duplicate=The Congressional District exists already.
 error.correspondence.template.committee.not.specified =Committee must be supplied. 
