--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -911,6 +911,7 @@ error.required.subaward.contact.rolodex.id=Address Book selection is a required 
 error.required.subaward.contact.contact.type.code=Contact type code is a required field.
 error.required.subaward.closeout.closeout.type.code=Closeout type code is a required field.
 error.required.subaward.closeout.date.requested=Date requested is a required field.
+error.required.subaward.closeout.date.followup=Date followup is a required field.
 error.required.subaward.funding.source.award.number= Award number is a required field.
 error.required.subaward.funding.source.award.number.duplicate = Award {0} has already been added as a Funding Source.
 error.required.anticipated.amount.released= Anticipated Amount is a required field.
