--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -640,6 +640,7 @@ error.obligated.end.before.project.start=The Obligated end date of Award number 
 error.project.end.before.project.start=The Project end date of Award number {0} cannot be before project start date.
 warning.transaction.obligated.less.than.limit=This transaction will cause the Total Costs Budget Limit to be greater than the Obligated Distributable Total for Award {0}.
 error.unknown.username=The person is unknown.
+error.empty.username=The User Name can not be empty.
 error.viewBudgetPeriod.notSelected=Budget Period must be selected to add a new Line Item.
 error.viewer.only=Only viewers may be added once a Proposal enters a workflow.
 error.workflow.submission=Validation errors exist. Please correct these errors prior to submitting to workflow routing.
