--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -50,7 +50,7 @@ document.question.synchBudgetRate.text=Activity Type Code has been changed.  Do 
 document.question.synchAwardRates.text=Award rates have been added or modified since the time the budget was created. Rates will be updated and the budget will be recalculated. Do you want to proceed?
 document.question.syncRates.text=Do you want to sync this rate type's Institute Rates & Applicable Rates with the current Institute Rates identified in the Unit Hierarchy rate table?  This will override the existing rates within both columns and cause recalculation of the budget.
 document.question.saveRates.text=Do you want to save the modified rates? Saving changes will cause the system to recalculate the budget.
-document.question.totalCostLimit.changed=Would you like to update all Award Budget Cost Limits before submitting? Award Budget Total Cost Limit has changed from {0} to {1}. Updating limits will require you to change your budget.
+document.question.totalCostLimit.changed=Would you like to update all Award Budget Cost Limits before submitting? Updating limits will require you to change your budget.
 document.question.clearDeliveryAddress.text=Are you sure you want to remove delivery address info?
 document.question.committee.management.delete.minute=Are you sure you want to delete this entry?
 document.question.committee.management.delete.otherAction=Are you sure you want to delete this entry?
