--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -928,6 +928,7 @@ subaward.error.oblig.amount.greater.than.amount.released=Total Obligated Amount 
 subaward.error.oblig.amount.is.greater.than.amount.released=Total Obligated Amount is greater than the Total Amount Released.
 subaward.error.invoice.number.should.be.unique=Invoice Number should be Unique.
 subaward.error.amount.released.less.than.zero=Amount released must be greater than or equal to zero.
+subaward.error.amount.released.zero=Amount released cannot be zero.
 negotiation.message.changeAssociationType=You are changing the document this Negotiation is associated with from {0} to {1}.  Are you sure?
 negotiation.error.end.date.greater.than.start=Negotiation End Date must be after or equal to the Negotiation Start Date.
 negotiation.error.inprogress.end.date=An end date cannot be set when the Negotiation is In-Progress.
