--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -616,6 +616,7 @@ error.anticipated.amount=The Anticipated Amount must be greater than or equal to
 error.award.obligated.negative=The Obligated Amount cannot be less than zero.
 error.award.anticipated.negative=The Anticipated Amount cannot be less than zero.
 error.award.effective.date=Obligation Start Date is required when Obligated Total is greater than zero.
+error.award.effective.date.timeAndMoney=Project Start Date is required when creating a Time And Money Document.
 error.obligation.expiration.date=Obligation End Date is required when Obligated Total is greater than zero.
 error.sponsorHierarchyExists={0} already exists in Sponsor Hierarchy table.
 error.start.date.on.or.before={0} must be before or equal to {1}.
