--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -676,7 +676,7 @@ message.s2sopportunity.searchOnOnlyCfdaNumber=The following opportunities were f
 newSubAward.organizationName.required=Organization Name is a required field
 newSubAward.subAwardFile.notExtracted=Failed to extract xml from the pdf file
 newSubAward.subAwardFile.required=Select a subaward pdf form to translate
-newSubAward.organizationName.invalid= The organization name has the invalid characters < {0} > in it. Please remove them.
+newSubAward.organizationName.invalid= The organization name is invalid.  Please select an organization using the organization search icon.
 newSubAward.subAwardFile.inValid= The file name < {0} > has invalid characters < {1} > in it. Please remove them.
 error.subAwardSponsorContact.person.exists={0} is already added to the SubAward Contacts
 personnelLineItem.exists=Cannot perform this operation on a line item with personnel budget details.
