KCIAC-139, KCIAC-155: Adding the modify submission action for iacuc.Also corrected the imports of committee service for KCIAC-155.

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -972,5 +972,7 @@ label.coi.disclosure.type.title=Event Title
 
 error.iacuc.validation.alternate.search=Validation errors exist on the {0} field. Please correct these errors prior to adding the alternative search.
 error.iacuc.validation.searchdate.after.currentdate=Search Date cannot be in the future.  Please correct prior to adding the alternative search.
+error.iacuc.protocol.document.state.changed=The document state has changed prior to the action taken, please reload and try again.
+error.iacuc.validation.searchdate.after.currentdate=Search Date cannot be in the future.  Please correct prior to adding the alternative search.
 
 error.protocol.onlinereview.comment.required=Online Review Comment is a required field.
