--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -287,7 +287,7 @@ error.duplicate.permissionsUser=User has already been added to the list. Use Edi
 error.duplicate.person=This Person Information is already added. 
 error.duplicate.personnel=Duplicate entries for {0} exist with the same start date.
 error.duplicate.proposalUser=User has already been added to the list.
-error.duplicate.protocolPersonnel=Duplicate Person. Same person cannot be listed in same role.
+error.duplicate.protocolPersonnel=Duplicate Person. Same person cannot be listed multiple times.
 error.effective.date.out.of.range=Salary for {0} does not calculate since the "Effective Date" is out of range. 
 error.empty.graduate.student.data={0} data must be entered.
 error.empty.report.terms=There are no reports defined
