--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -531,6 +531,7 @@ error.question.status.in.use=The question is currently used in active questionna
 error.questionnaire.name.exist=Questionnaire name already exists.
 error.questionnaire.filename.invalid=Questionnaire template name must be a xsl file.
 error.questionnaire.question_inactive=Question "{0}" is inactive.
+error.questionnaire.alreadyEdited=This questionnaire has been edited by another person.  Please close close and reopen this questionnaire to edit it.
 error.rateClass.not.valid.for.type=The Rate Class Code {0} is not valid for this type of rate document.
 error.rateType.not.exist=Rate Type ({0},{1}) does not exist.
 error.rateType.not.valid.for.type=The Rate Type Code {0} is not valid for this type of rate document.
