--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -977,3 +977,7 @@ error.iacuc.protocol.document.state.changed=The document state has changed prior
 error.iacuc.validation.searchdate.after.currentdate=Search Date cannot be in the future.  Please correct prior to adding the alternative search.
 
 error.protocol.onlinereview.comment.required=Online Review Comment is a required field.
+
+
+error.iacuc.validation.personResponsible.valid=Please select one or more persons from the list to proceed.
+error.iacuc.validation.duplicate.personResponsible=Duplicate person.
