KCIAC-149, KCIAC-151, KCIAC-160, KCIAC-161, KCIAC-162 Procedure panel - validation

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -981,3 +981,4 @@ error.protocol.onlinereview.comment.required=Online Review Comment is a required
 
 error.iacuc.validation.personResponsible.valid=Please select one or more persons from the list to proceed.
 error.iacuc.validation.duplicate.personResponsible=Duplicate person.
+error.iacuc.validation.duplicate.studyGroup.location=Duplicate study group location.
