--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -982,3 +982,6 @@ error.protocol.onlinereview.comment.required=Online Review Comment is a required
 error.iacuc.validation.personResponsible.valid=Please select one or more persons from the list to proceed.
 error.iacuc.validation.duplicate.personResponsible=Duplicate person.
 error.iacuc.validation.duplicate.studyGroup.location=Duplicate study group location.
+
+error.iacuc.validation.invalid.person.training=Invalid person training.
+error.iacuc.validation.mismatch.person.training=Person id and training details does not match.
