KCIAC-149, KCIAC-151, KCIAC-160, KCIAC-161, KCIAC-162 Procedure panel - validation
KCIAC-230 demo data

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -985,3 +985,5 @@ error.iacuc.validation.duplicate.studyGroup.location=Duplicate study group locat
 
 error.iacuc.validation.invalid.person.training=Invalid person training.
 error.iacuc.validation.mismatch.person.training=Person id and training details does not match.
+error.iacuc.validation.studyGroup.valid=Please select one or more Groups:Species and one or more persons from the list to proceed.
+error.iacuc.validation.duplicate.studyGroup=Duplicate study group.
